# druidforms

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  bump.sh  package-lock.json  package.json  pyproject.toml  tsconfig.json
assets/: color.md  palette.json
druids/: AGENTS.consumer.md  AGENTS.md  CHANGELOG.md  README.consumer.md  __init__.py  core.py
druids/auth/: __init__.py  manager.py  middleware.py  routes.py  sessions.py
druids/preview/: __init__.py  __main__.py
druids/preview/templates/: preview.jinja2
druids/static/: druids.css  druids.js  lit-vendor.js
druids/templates/druids/: base.jinja2  login.jinja2
web/src/: assets.d.ts  dialog.ts  druid-accent-picker.ts  druid-button.ts  druid-chat-message.ts  druid-footer.ts  druid-icon-button.ts  druid-icon.ts  druid-log-view.ts  druid-login-card.ts  druid-navbar.ts  druid-popover.ts  druid-progress.ts  druid-search.ts  druid-select.ts  druid-subtabs.ts  druid-tabs.ts  druid-textarea.ts  druid-tooltip.ts  icons.ts  index.ts  leaf.ts  lit-vendor.ts  theme.ts  toast.ts
